# Kuznyechik-Cipher

./: README.md
grasshopper/: ByteArray.cpp  ByteArray.h  CMakeLists.txt  Kuznyechik.cpp  Kuznyechik.h  KuznyechikConstants.h  main.cpp
grasshopper/crypto/ streebog/: StreebogHash.cpp  StreebogHash.h  streebog-consts.h  streebog-core.h  streebog-precalc.h  streebog-ref.h  streebog.h
grasshopper/crypto/hmac/: HMAC-constats.h  HmacGenerator.cpp  HmacGenerator.h
grasshopper/crypto/kuznyechik/: CipherConstants.h  KuznyechickLUT.h  Kuznyechik.cpp  Kuznyechik.h
grasshopper/crypto/kuznyechik/util/: Block64Array.cpp  Block64Array.h  ByteArray.cpp  ByteArray.h
grasshopper/crypto/streebog/: StreebogHash.cpp  StreebogHash.h  streebog-config.h  streebog-core.h  streebog-enter.h  streebog-ref.h
grasshopper/crypto/util/: ByteArray.cpp  ByteArray.h  ByteFlow.cpp  ByteFlow.h
